--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "tailwindcss": "^1.5.2"
   },
   "devDependencies": {
+    "@fullhuman/postcss-purgecss": "^2.3.0",
     "postcss-preset-env": "^6.7.0",
     "prettier": "2.0.5"
   }
