everything fetches from static object now

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "next": "9.4.4",
     "react": "16.13.1",
     "react-dom": "16.13.1",
+    "recoil": "0.0.10",
     "tailwindcss": "^1.5.2"
   },
   "devDependencies": {
